[project]
name = "usdb_syncer"
authors = [
    {name = "Markus Böhning", email = "markus.boehning@gmail.com"},
]
maintainers = [
    {name = "RumovZ", email = "gp5glkw78@relay.firefox.com"},
    {name = "randompersona1", email = "74961116+randompersona1@users.noreply.github.com"},
]
description = "A download manager for USDB songs."
readme = "README.md"
requires-python = ">3.10,<3.13"
dependencies = [
    "appdirs",
    "attrs",
    "beautifulsoup4",
    "ffmpeg-normalize>=1.27",
    "filetype",
    "keyring",
    "lxml",
    "mutagen",
    "numpy<2",
    "packaging",
    "pillow>=10",
    "PySide6",
    "python-ffmpeg==2.0.12",
    "reportlab",
    "requests",
    "rookiepy>=0.5.3",
    "send2trash",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "unidecode",
    "yt-dlp[default,curl_cffi]",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/bohning/usdb_syncer"

[project.scripts]
usdb_syncer = "usdb_syncer.gui:main"

[project.optional-dependencies]
instrumental-cpu = [
    "demucs==4.0.1",
    "torch==2.7.0+cpu",
    "torchaudio==2.7.0+cpu",
]
instrumental-cuda = [
    "demucs==4.0.1",
    "torch==2.7.0+cu128",
    "torchaudio==2.7.0+cu128",
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
# Add files that are excluded from vcs to wheel for distribution.
include = [
    { path = "src/usdb_syncer/gui/forms/*.py", format = ["sdist", "wheel"] },
    { path = "src/usdb_syncer/gui/resources/qt/*.py", format = ["sdist", "wheel"] },
    { path = "src/usdb_syncer/data/*.json", format = ["sdist", "wheel"] },
]
version = "0.0.0" # This will be dynamically set by poetry-dynamic-versioning.

[tool.poetry.dependencies]
torch = [
    { version = "==2.7.0+cpu", markers = "extra == 'instrumental-cpu' and extra != 'instrumental-cuda'", source = "torch-cpu" },
    { version = "==2.7.0+cu128", markers = "extra == 'instrumental-cuda' and extra != 'instrumental-cpu'", source = "torch-cuda" },
]
torchaudio = [
    { version = "==2.7.0+cpu", markers = "extra == 'instrumental-cpu' and extra != 'instrumental-cuda'", source = "torch-cpu" },
    { version = "==2.7.0+cu128", markers = "extra == 'instrumental-cuda' and extra != 'instrumental-cpu'", source = "torch-cuda" },
]

[tool.poetry.group.dev.dependencies]
tox = "*"
# lint
ruff = "0.11.6"
mypy = "*"
types-requests = "*"
# test
pytest = "*"
# benchmark
snakeviz = "*"
# tools
defusedxml = "^0.7.1"

[tool.poetry.group.build.dependencies]
PySide6 = "*"  # for file generation
dunamai = "*"

[tool.poetry.group.bundle.dependencies]
pyinstaller = "*"
pyinstaller-hooks-contrib = "*"
# specifically required for pyinstaller (Note: darwin -> macos)
altgraph = "*"
macholib = {version = "*", markers="sys_platform == 'darwin'"}
pywin32-ctypes = {version = "*", markers="sys_platform == 'win32'"}

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
substitution.files = []

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[tool.ruff]
extend-exclude = [
    "forms",
    "qt",
]
target-version = "py312"
preview = true

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "A",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "E",
    "F",
    "I",
    "LOG",
    "N",
    "PTH",
    "Q",
    "RUF",
    "S",
    "TRY",
    "W",
]
ignore = [
    # Since we're using the ruff formatter, we follow ruff's official guide on what
    # rules to skip: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    # We're fine with `assert`s if they're not used for validation, but state facts
    "S101",
    # Allow `subprocess` and starting without shell.
    "S404",
    "S603",
    "S606",
    # Maybe investigate in the future, if it is possible to do this more safely.
    "S607",
    # This flags _all_ dynamic SQL constructions, so it's pointless.
    "S608",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# For consistency with the formatter, see https://docs.astral.sh/ruff/settings/#lint_isort_split-on-trailing-comma 
split-on-trailing-comma = false

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
follow_imports = "silent"
exclude = ["src/usdb_syncer/gui/forms", "src/usdb_syncer/gui/resources"]

[tool.pyright]
# generates a lot of false positives for mutagen
reportPrivateImportUsage = false
exclude = [
    "src/usdb_syncer/gui/forms",
    "src/usdb_syncer/gui/resources",
    "venv",
    ".tox",
]
