[metadata]
name = usdb_syncer
author = Markus Böhning
author_email = markus.boehning@gmail.com
description = A download manager for USDB songs.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/bohning/usdb_syncer


[options]
python_requires = >=3.10
packages = find:
package_dir =
    =src
install_requires =
    importlib-metadata
    wheel
    PySide6
    lxml
    beautifulsoup4
    requests
    yt_dlp
    moviepy
    pdfme
    appdirs
    urlextract
    unidecode
    attrs

[options.packages.find]
where = src


[options.extras_require]
dev =
    tox
    %(lint)s
    %(test)s

lint =
    isort
    black
    mypy
    pylint
    pytest
    types-setuptools
    types-requests

test =
    pytest

[options.entry_points]
console_scripts =
    usdb_syncer = usdb_syncer.main:cli_entry
    generate_pyside_files = tools.generate_pyside_files:cli_entry
