[metadata]
name = usdb_syncer
author = Markus Böhning
author_email = markus.boehning@gmail.com
description = A download manager for USDB songs.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/bohning/usdb_syncer


[options]
python_requires = ==3.11.*
packages = find:
package_dir =
    =src
install_requires =
    importlib-metadata
    wheel
    PySide6
    lxml
    beautifulsoup4
    requests
    yt_dlp
    pillow
    pdfme
    appdirs
    unidecode
    attrs
    pyshorteners
    filetype
    browser_cookie3
    ffmpeg-normalize>=1.27
    mutagen
    iso639-lang
    keyring

[options.packages.find]
where = src


[options.extras_require]
dev =
    tox
    %(lint)s
    %(test)s
    %(build)s

lint =
    isort==5.12
    black==23.3
    mypy==1.2
    pylint==2.17
    pytest
    types-setuptools
    types-requests

test =
    pytest

build =
    pyinstaller
    pyinstaller-hooks-contrib

[options.entry_points]
console_scripts =
    usdb_syncer = usdb_syncer.main:cli_entry
    generate_pyside_files = tools.generate_pyside_files:cli_entry
    generate_song_list_json = tools.generate_song_list_json:cli_entry
    write_release_info = tools.write_release_info:cli_entry
