[metadata]
name = usdb_syncer
author = Markus Böhning
author_email = markus.boehning@gmail.com
description = A download manager for USDB songs.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/bohning/usdb_syncer


[options]
python_requires = ==3.11.*
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    usdb_syncer = usdb_syncer.gui:main
    generate_pyside_files = tools.generate_pyside_files:cli_entry
    generate_song_list_json = tools.generate_song_list_json:cli_entry
    write_release_info = tools.write_release_info:cli_entry
